--- a/Practice/index.html
+++ b/Practice/index.html
@@ -18,6 +18,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon" />
     <title>Practice</title>
   </head>
   <body>
