--- a/SS-2/index.html
+++ b/SS-2/index.html
@@ -116,6 +116,7 @@
               </form>
             </div>
           </div>
+          <p class="end_p">©2024. it's a journey with CODE_FIGHTERS</p>
         </div>
       </footer>
 
