--- a/SS-3/index.html
+++ b/SS-3/index.html
@@ -39,7 +39,7 @@
         <main class="main">
           <div class="main1">
             <div class="img img1">
-              <audio id="audio_play">
+              <audio id="audio_play" controls>
                 <source
                   src="./audio/Evgeny Grinko - Valse.mp3"
                   type="audio/ogg"
